--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <div class="item">
             <img src="icons/2014-8-11-map.png" alt="小地图哦"/>
         </div>
+        <div class="item">
+            <img src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
+        </div>
     </div>
 </body>
 </html>
