add Larry O'Brien NBA Championship Trophy

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="item">
             <img src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
         </div>
+                <div class="item">
+            <img src="icons/2014-8-18-trophy.png" alt="Larry O'Brien NBA Championship Trophy"/>
+        </div>
     </div>
 </body>
 </html>
