--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>作品</title>
     <link rel="stylesheet" href="http://cdn.staticfile.org/normalize/3.0.1/normalize.min.css"/>
-    <link rel="stylesheet" href="style/app.css"/>
 </head>
 <body>
     <div class="gallery">
@@ -14,8 +13,8 @@
         <div class="item">
             <img src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
         </div>
-                <div class="item">
-            <img src="icons/2014-8-18-trophy.png" alt="Larry O'Brien NBA Championship Trophy"/>
+        <div class="item">
+            <img src="icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
         </div>
     </div>
 </body>
