--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no"/>
     <title>作品</title>
     <link rel="stylesheet" href="http://cdn.staticfile.org/normalize/3.0.1/normalize.min.css"/>
+    <link rel="stylesheet" href="style/app.css"/>
 </head>
 <body>
     <div class="gallery">
