--- a/index.html
+++ b/index.html
@@ -6,18 +6,42 @@
     <title>作品</title>
     <link rel="stylesheet" href="http://cdn.staticfile.org/normalize/3.0.1/normalize.min.css"/>
     <link rel="stylesheet" href="style/app.css"/>
+    <link rel="stylesheet" href="style/sliderit.css"/>
 </head>
 <body>
-    <div class="gallery">
-        <div class="item">
-            <img src="icons/2014-8-11-map.png" alt="小地图哦"/>
-        </div>
-        <div class="item">
-            <img src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
-        </div>
-        <div class="item">
-            <img src="icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
+    <div class="gallery slider-wrap">
+        <div class="slider-inner">
+            <div class="slider-item item">
+                <img src="icons/2014-8-11-map.png" alt="小地图哦"/>
+            </div>
+            <div class="slider-item item">
+                <img src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
+            </div>
+            <div class="slider-item item">
+                <img src="icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
+            </div>
         </div>
     </div>
+    <div class="toolbar">
+        <button class="toolbar-btn toolbar-btn-prev js-prev">prev</button>
+        <button class="toolbar-btn toolbar-btn-next js-next">next</button>
+    </div>
+    <script src="javascript/slider.js"></script>
+    <script>
+        var slider = $('.slider-wrap');
+        var prevBtn = document.querySelector('.js-prev');
+        var nextBtn = document.querySelector('.js-next');
+        slider.slider({
+            direction: 'x',
+            infinite: false,
+            moveRadius: 30
+        });
+        prevBtn.addEventListener('click', function(){
+            slider.slider('prev');
+        });
+        nextBtn.addEventListener('click', function(){
+            slider.slider('next');
+        });
+    </script>
 </body>
 </html>
