--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no"/>
     <title>作品</title>
     <link rel="stylesheet" href="http://cdn.staticfile.org/normalize/3.0.1/normalize.min.css"/>
-    <link rel="stylesheet" href="style/app.css"/>
+    <link rel="stylesheet" href="style/awesome-font/font-awesome.min.css"/>
     <link rel="stylesheet" href="style/sliderit.css"/>
+    <link rel="stylesheet" href="style/app.css"/>
 </head>
 <body>
     <div class="gallery slider-wrap">
         <div class="slider-inner">
             <div class="slider-item item">
-                <img src="icons/2014-8-11-map.png" alt="小地图哦"/>
+                <img class="icon" src="icons/2014-8-11-map.png" alt="小地图哦"/>
             </div>
             <div class="slider-item item">
-                <img src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
+                <img class="icon" src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
             </div>
             <div class="slider-item item">
-                <img src="icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
+                <img class="icon" src="icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
+            </div>
+            <div class="slider-item item">
+                <img class="ui" src="ui/2014-8-23login-form@2x.jpg" alt="first serious sketch work"/>
             </div>
         </div>
     </div>
     <div class="toolbar">
-        <button class="toolbar-btn toolbar-btn-prev js-prev">prev</button>
-        <button class="toolbar-btn toolbar-btn-next js-next">next</button>
+        <button class="toolbar-btn toolbar-btn-prev js-prev fa fa-arrow-left"></button>
+        <button class="toolbar-btn toolbar-btn-next js-next fa fa-arrow-right"></button>
     </div>
     <script src="javascript/slider.js"></script>
     <script>
