--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="gallery slider-wrap">
         <div class="slider-inner">
             <div class="slider-item item">
-                <img class="icon" src="icons/2014-8-11-map.png" alt="小地图哦"/>
+                <img class="icon" src="exports/icons/2014-8-11-map.png" alt="小地图哦"/>
             </div>
             <div class="slider-item item">
-                <img class="icon" src="icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
+                <img class="icon" src="exports/icons/2014-8-13-napkin.png" alt="不侧漏哦"/>
             </div>
             <div class="slider-item item">
-                <img class="icon" src="icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
+                <img class="icon" src="exports/icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
             </div>
             <div class="slider-item item">
-                <img class="ui" src="ui/2014-8-23login-form@2x.jpg" alt="first serious sketch work"/>
+                <img class="ui" src="exports/ui/2014-8-23login-form@2x.jpg" alt="first serious sketch work"/>
             </div>
         </div>
     </div>
