add browser icon

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <img class="icon" src="exports/icons/2014-8-18-tropy.jpg" alt="Larry O'Brien NBA Championship Trophy"/>
             </div>
             <div class="slider-item item">
+                <img class="icon" src="exports/icons/2014-8-21-browser@2x.png" alt="browser icon"/>
+            </div>
+            <div class="slider-item item">
                 <img class="ui" src="exports/ui/2014-8-23login-form@2x.jpg" alt="first serious sketch work"/>
             </div>
         </div>
