--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <button class="toolbar-btn toolbar-btn-prev js-prev fa fa-arrow-left"></button>
         <button class="toolbar-btn toolbar-btn-next js-next fa fa-arrow-right"></button>
     </div>
+    <script src="http://cdn.staticfile.org/zepto/1.0rc1/zepto.min.js"></script>
     <script src="javascript/slider.js"></script>
     <script>
         var slider = $('.slider-wrap');
