--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         var nextBtn = document.querySelector('.js-next');
         slider.slider({
             direction: 'x',
-            infinite: false,
+            infinite: true,
             moveRadius: 30
         });
         prevBtn.addEventListener('click', function(){
