--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
                 <img class="ui" src="dist/ui/2014-8-23-login-form@1x.jpg" alt="first serious sketch work"/>
             </div>
             <div class="slider-item item">
-                <img class="ui" src="dist/icons/2014-8-30-colorSwitch.jpg" alt="colorful imitation"/>
+                <img class="icon" src="dist/icons/2014-8-30-colorSwitch.jpg" alt="colorful imitation"/>
             </div>
             <div class="slider-item item">
                 <img class="ui" src="dist/ui/2014-9-16-login-peacefully@2x.jpg" alt="a peaceful login form"/>
+            </div>
+            <div class="slider-item item">
+                <img class="icon" src="dist/icons/2014-9-20-virginClock@2.jpg" alt="a baby skin clock icon"/>
             </div>
         </div>
     </div>
