new icon and new UI

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <div class="slider-item item">
                 <img class="icon" src="dist/icons/2014-9-20-virginClock@2.jpg" alt="a baby skin clock icon"/>
             </div>
+            <div class="slider-item item">
+                <img class="icon" src="dist/icons/2014-9-25-blogLogo@2x.png" alt="blog logo"/>
+            </div>
+            <div class="slider-item item">
+                <img class="icon" src="dist/ui/2014-09-28-blogShare@1x.jpg" alt="blog logo"/>
+            </div>
         </div>
     </div>
     <div class="toolbar">
