--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <div class="slider-item item">
                 <img class="icon" src="dist/ui/2014-12-20-website@2x.jpg" alt="product ui design"/>
             </div>
+           <div class="slider-item item">
+                <img class="icon" src="dist/ui/2015-1-10-UI-HeadLine@2x.jpg" alt="head line"/>
+            </div>
         </div>
     </div>
     <div class="toolbar">
