--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
              <div class="slider-item item">
                 <img class="icon" src="dist/ui/2015-1-10-color-board@2x.jpg" alt="head line"/>
             </div>
+            <div class="slider-item item">
+                <img class="icon" src="dist/icons/2015-1-11-flat-letter.jpg" alt="head line"/>
+            </div>
         </div>
     </div>
     <div class="toolbar">
