--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 <img class="icon" src="dist/ui/2015-1-10-color-board@2x.jpg" alt="head line"/>
             </div>
             <div class="slider-item item">
-                <img class="icon" src="dist/icons/2015-1-11-flat-letter.jpg" alt="head line"/>
+                <img class="icon" src="dist/icons/2015-1-11-flat-letter.jpg" alt="flat letter"/>
+            </div>
+            <div class="slider-item item">
+                <img class="icon" src="dist/icons/evernote imitation.jpg" alt="evernote imitation"/>
             </div>
         </div>
     </div>
