--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <button class="toolbar-btn toolbar-btn-next js-next fa fa-arrow-right"></button>
     </div>
     <script src="http://cdn.staticfile.org/zepto/1.0rc1/zepto.min.js"></script>
+    <script src="javascript/zepto.fullpage.js"></script>
     <script src="javascript/slider.js"></script>
     <script>
         var slider = $('.slider-wrap');
