--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <img class="icon" src="dist/icons/evernote imitation.jpg" alt="evernote imitation"/>
         </div>
     </div>
+    <div class="page page16">
+        <div class="page-wrap">
+            <img src="dist/icons/2015-3-3-Blog-logo.jpg" alt="blog logo v2" class="icon">
+        </div>
+    </div>
 </div>
 <script src="javascript/color-thief.min.js"></script>
 <script>
