--- a/index.html
+++ b/index.html
@@ -50,29 +50,24 @@
             <img class="icon j-notPick" src="dist/icons/2014-9-20-virginClock@2.jpg" alt="a baby skin clock icon"/>
         </div>
     </div>
-    <div class="page page9">
-        <div class="page-wrap">
-            <img class="icon icon--small j-notPick" src="dist/icons/2014-9-25-blogLogo@2x.jpg" alt="blog logo"/>
-        </div>
-    </div>
     <div class="page page10">
         <div class="page-wrap">
-            <img class="icon" src="dist/ui/2014-09-28-blogShare@1x.jpg" alt="blog logo"/>
+            <img class="ui" src="dist/ui/2014-09-28-blogShare@1x.jpg" alt="blog logo"/>
         </div>
     </div>
     <div class="page page11">
         <div class="page-wrap">
-            <img class="icon" src="dist/ui/2014-12-20-website@2x.jpg" alt="product ui design"/>
+            <img class="ui" src="dist/ui/2014-12-20-website@2x.jpg" alt="product ui design"/>
         </div>
     </div>
     <div class="page page12">
         <div class="page-wrap">
-            <img class="icon" src="dist/ui/2015-1-10-UI-HeadLine@2x.jpg" alt="head line"/>
+            <img class="ui" src="dist/ui/2015-1-10-UI-HeadLine@2x.jpg" alt="head line"/>
         </div>
     </div>
     <div class="page page13">
         <div class="page-wrap">
-            <img class="icon" src="dist/ui/2015-1-10-color-board@2x.jpg" alt="head line"/>
+            <img class="ui" src="dist/ui/2015-1-10-color-board@2x.jpg" alt="head line"/>
         </div>
     </div>
     <div class="page page14">
